@@ -24,33 +24,32 @@ XS-Autobuild: yes
 
 Package: ${nvidia}-driver
 Section: non-free/x11
-Architecture: amd64 ${arch:ppc64el} i386 armhf
+Architecture: amd64 ${arch:ppc64el}
 Pre-Depends:
- nvidia-installer-cleanup [${nvidia:arch:has-driver}],
+ nvidia-installer-cleanup,
  ${nvidia:legacy-check},
 Depends:
- nvidia-legacy-390xx-driver [${nvidia:arch:has-no-driver}],
- ${nvidia}-driver-libs (= ${binary:Version}) [${nvidia:arch:has-driver}]
- | ${nvidia}-driver-libs-nonglvnd (= ${binary:Version}) [${nvidia:arch:has-driver}],
- ${nvidia}-driver-bin (= ${binary:Version}) [${nvidia:arch:has-driver}],
- xserver-xorg-video-${nvidia} (= ${binary:Version}) [${nvidia:arch:has-driver}],
- ${nvidia}-vdpau-driver (= ${binary:Version}) [${nvidia:arch:has-driver}],
- ${nvidia}-alternative (= ${binary:Version}) [${nvidia:arch:has-driver}],
+ ${nvidia}-driver-libs (= ${binary:Version})
+ | ${nvidia}-driver-libs-nonglvnd (= ${binary:Version}),
+ ${nvidia}-driver-bin (= ${binary:Version}),
+ xserver-xorg-video-${nvidia} (= ${binary:Version}),
+ ${nvidia}-vdpau-driver (= ${binary:Version}),
+ ${nvidia}-alternative (= ${binary:Version}),
  ${nvidia:kmod:binary},
- nvidia-support [${nvidia:arch:has-driver}],
+ nvidia-support,
  ${misc:Depends}
 Recommends:
- ${nvidia-settings} [${nvidia:arch:has-driver}],
+ ${nvidia-settings},
 # help nvidia-persistenced by pre-selecting the correct provider for libnvidia-cfg1-any
- lib${nvidia}-cfg1 (= ${binary:Version}) [${nvidia:arch:has-driver}],
- nvidia-persistenced [${nvidia:arch:has-driver}],
+ lib${nvidia}-cfg1 (= ${binary:Version}),
+ nvidia-persistenced,
 Suggests:
  ${nvidia:kmod:source},
 Provides:
- nvidia-driver-any [${nvidia:arch:has-driver}],
- nvidia-glx-any [${nvidia:arch:has-driver}],
+ nvidia-driver-any,
+ nvidia-glx-any,
 Description: NVIDIA metapackage${nvidia:VariantDesc}
- ${nvidia:no-driver-notice}This metapackage depends on the NVIDIA binary driver and libraries
+ This metapackage depends on the NVIDIA binary driver and libraries
  that provide optimized hardware acceleration of
  OpenGL/GLX/EGL/GLES/Vulkan applications via a direct-rendering X Server.
  .
@@ -126,7 +125,7 @@ Depends:
  ${nvidia}-kernel-support--v1,
  ${misc:Depends}
 Recommends:
- ${nvidia}-driver (>= ${nvidia:Version}) [${nvidia:arch:has-driver}]
+ ${nvidia}-driver (>= ${nvidia:Version})
  | ${libcuda1} (>= ${nvidia:Version}),
 Provides:
  ${nvidia}-kernel-${nvidia:Version},
@@ -188,29 +187,28 @@ Description: NVIDIA binary kernel module source${nvidia:VariantDesc}
 
 Package: xserver-xorg-video-${nvidia}
 Section: non-free/x11
-Architecture: amd64 ${arch:ppc64el} i386 armhf
+Architecture: amd64 ${arch:ppc64el}
 Pre-Depends:
- nvidia-installer-cleanup [${nvidia:arch:has-driver}],
+ nvidia-installer-cleanup,
  ${nvidia:legacy-check},
 Depends:
- xserver-xorg-video-nvidia-legacy-390xx [${nvidia:arch:has-no-driver}],
- lib${nvidia}-glcore (= ${binary:Version}) [${nvidia:arch:has-driver}],
- ${nvidia}-alternative (= ${binary:Version}) [${nvidia:arch:has-driver}],
- nvidia-support [${nvidia:arch:has-driver}],
+ lib${nvidia}-glcore (= ${binary:Version}),
+ ${nvidia}-alternative (= ${binary:Version}),
+ nvidia-support,
  ${nvidia:xorgDepends},
  ${shlibs:Depends}, ${misc:Depends}
 Recommends:
- ${nvidia}-driver (>= ${nvidia:Version}) [${nvidia:arch:has-driver}],
- ${nvidia}-vdpau-driver (>= ${nvidia:Version}) [${nvidia:arch:has-driver}],
+ ${nvidia}-driver (>= ${nvidia:Version}),
+ ${nvidia}-vdpau-driver (>= ${nvidia:Version}),
  ${nvidia:kmod:binary},
- ${nvidia-settings} [${nvidia:arch:has-driver}],
+ ${nvidia-settings},
 Suggests:
  ${nvidia:kmod:source},
 Provides:
- xserver-xorg-video-nvidia-any [${nvidia:arch:has-driver}],
+ xserver-xorg-video-nvidia-any,
  ${nvidia:xorgProvides},
 Description: NVIDIA binary Xorg driver${nvidia:VariantDesc}
- ${nvidia:no-driver-notice}The NVIDIA binary driver provides optimized hardware acceleration of
+ The NVIDIA binary driver provides optimized hardware acceleration of
  OpenGL/GLX/EGL/GLES applications via a direct-rendering X Server
  for graphics cards using NVIDIA chip sets.
  .
@@ -937,18 +935,17 @@ Description: NVIDIA binary Vulkan ray tracing (rtcore) library${nvidia:VariantDe
 
 Package: ${nvidia}-smi
 Section: non-free/utils
-Architecture: amd64 ${arch:ppc64el} i386 armhf
+Architecture: amd64 ${arch:ppc64el}
 Depends:
- nvidia-legacy-390xx-smi [${nvidia:arch:has-no-driver}],
- ${nvidia}-alternative (= ${binary:Version}) [${nvidia:arch:has-driver}],
- lib${nvidia}-ml1 (= ${binary:Version}) [${nvidia:arch:has-driver}],
+ ${nvidia}-alternative (= ${binary:Version}),
+ lib${nvidia}-ml1 (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Recommends:
  ${nvidia:kmod:binary},
 Suggests:
  ${nvidia:kmod:source},
 Description: NVIDIA System Management Interface${nvidia:VariantDesc}
- ${nvidia:no-driver-notice}The NVIDIA Management Library (NVML) provides a monitoring and management API.
+ The NVIDIA Management Library (NVML) provides a monitoring and management API.
  The application "nvidia-smi" is the NVIDIA System Management Interface (NVSMI)
  and provides a command line interface to this functionality.
  .
@@ -1005,7 +1002,7 @@ Recommends:
  ${nvidia}-smi [${nvidia:arch:has-driver}],
 # help nvidia-persistenced by pre-selecting the correct provider for libnvidia-cfg1-any
  lib${nvidia}-cfg1 (= ${binary:Version}) [${nvidia:arch:has-driver}],
- nvidia-persistenced,
+ nvidia-persistenced [${nvidia:arch:has-driver}],
  ${libcuda1}:i386 (= ${binary:Version}) [amd64],
 Suggests:
  nvidia-cuda-mps [${nvidia:arch:has-driver}],
