@@ -1,3 +1,0 @@
-# On architectures no longer supported by the current driver,
-# this is a dummy package depending on the 390xx legacy driver.
-[i386 armhf]: transitional-package-should-be-oldlibs-optional
