@@ -1,16 +1,12 @@
 # The NVIDIA license does not allow any form of modification.
-[!i386 !armhf]: embedded-library usr/lib/#PRIVATE#/nvidia-smi: zlib
-[!i386 !armhf]: spelling-error-in-binary
-[!i386 !armhf]: hardening-no-bindnow
-[!i386 !armhf]: hardening-no-fortify-functions
-[!i386 !armhf]: hardening-no-pie
-[!i386 !armhf]: hardening-no-relro
+embedded-library usr/lib/#PRIVATE#/nvidia-smi: zlib
+spelling-error-in-binary
+hardening-no-bindnow
+hardening-no-fortify-functions
+hardening-no-pie
+hardening-no-relro
 hardening-no-stackprotector
 
 # The current setup involving multiple chained alternatives would be very
 # hard to migrate to /usr/libexec.
-[!i386 !armhf]: executable-in-usr-lib
-
-# On architectures no longer supported by the current driver,
-# this is a dummy package depending on the 390xx legacy driver.
-[i386 armhf]: transitional-package-should-be-oldlibs-optional
+executable-in-usr-lib
