@@ -1,10 +1,6 @@
 # The NVIDIA license does not allow any form of modification.
-[!i386 !armhf]: spelling-error-in-binary
-[!i386 !armhf]: hardening-no-bindnow
-[!i386 !armhf]: hardening-no-fortify-functions
-[!i386 !armhf]: hardening-no-relro
+spelling-error-in-binary
+hardening-no-bindnow
+hardening-no-fortify-functions
+hardening-no-relro
 hardening-no-stackprotector
-
-# On architectures no longer supported by the current driver,
-# this is a dummy package depending on the 390xx legacy driver.
-[i386 armhf]: transitional-package-should-be-oldlibs-optional
