@@ -1,1 +1,0 @@
-xserver-xorg-video-nvidia.postrm.amd64
